<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="12dp"
        android:background="@drawable/bg_home">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
         >

            <ImageButton
                android:id="@+id/btn_more"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="7dp"
                android:background="@drawable/ic_more"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="7dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/lato_black"
                android:gravity="center_horizontal"
                android:paddingEnd="0dp"
                android:text="Hanoi"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tv_current_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="96dp"
                android:fontFamily="@font/lato_regular"
                android:gravity="center_horizontal"
                android:text="38\u00B0"
                android:textColor="@color/white"
                android:textSize="75sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.513"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_weather_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_regular"
                android:gravity="center_horizontal"
                android:text="Sunny"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_current_temp" />

            <TextView
                android:id="@+id/tv_HL_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="H: 38\u00B0  L: 28\u00B0"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_weather_status" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_5day_forecast"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="@color/blue"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.175"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_HL_temp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/_5_day_forecast"
                        android:textColor="@color/white"
                        android:textSize="15sp" />


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_daily_forecast"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp" />

                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/cv_visibility"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                app:cardBackgroundColor="@color/blue"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_5day_forecast">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/linearLayoutCompat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginHorizontal="7dp"
                        android:background="@drawable/visibility" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="@font/lato_regular"
                        android:text="@string/visibility"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <TextView
                    android:id="@+id/tv_visibility"
                    style="@style/weatherDetailTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="1km"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat"
                    app:layout_constraintVertical_bias="0.0" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_feels_like"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="20dp"
                app:cardBackgroundColor="@color/blue"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_5day_forecast">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/linearLayoutCompat2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="7dp"
                            android:background="@drawable/feels_like" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:fontFamily="@font/lato_regular"
                            android:text="@string/feels_like"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <TextView
                        android:id="@+id/tv_feels_like"
                        style="@style/weatherDetailTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="38"

                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat2"
                        app:layout_constraintVertical_bias="0.0" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_humidity"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginVertical="12dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                app:cardBackgroundColor="@color/blue"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_visibility">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/linearLayoutCompat3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginHorizontal="7dp"
                            android:background="@drawable/humidity" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:fontFamily="@font/lato_regular"
                            android:text="@string/humidity"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <TextView
                        android:id="@+id/tv_humidity"
                        style="@style/weatherDetailTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="100"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat3"
                        app:layout_constraintVertical_bias="0.0" />
                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_pressure"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginVertical="12dp"
                android:layout_marginEnd="20dp"
                app:cardBackgroundColor="@color/blue"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_feels_like">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/linearLayoutCompat4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginHorizontal="7dp"
                            android:background="@drawable/wind" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:fontFamily="@font/lato_regular"
                            android:text="@string/wind"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <TextView
                        android:id="@+id/tv_wind"
                        style="@style/weatherDetailTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="10km/h"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat4"
                        app:layout_constraintVertical_bias="0.0" />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
